--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -259,14 +259,16 @@ header{
 }
 .list-group ul li{
     margin-bottom: 25px;
-    
-    
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    width: 350px;
 }
 .list-group ul li a{
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-around;
     font-size: 16px;
     font-weight: 800;
     
@@ -287,6 +289,9 @@ header{
 .list-group ul li a p:hover {
     background-color: rgb(255, 102, 0);
     color: white;
+}
+.list-group ul li:hover{
+    background-color: #caced2;
 }
 
 
