--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@
     --paragraph: white;
 }
 .container{
-    max-width: 75%;
+    max-width: 80%;
     /* width: 1200px; */
     margin: 0 auto;
 }
@@ -308,7 +308,7 @@ header{
 
 .new-vacancies-card{
     width: 100%;
-    height: 1798px;
+    height: 1420px;
     background-color: #F6F6F6;
     
 }
@@ -378,6 +378,7 @@ header{
 .card-group{
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     width: 100%;
 }
 
